--- a/package.json
+++ b/package.json
@@ -21,14 +21,12 @@
     "url": "https://github.com/ephelip/react-skeleton/issues"
   },
   "homepage": "https://github.com/ephelip/react-skeleton#readme",
-  "devDependencies": {
+  "dependencies": {
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
-    "watchify": "^3.7.0"
-  },
-  "dependencies": {
     "react": "^0.14.7",
-    "react-dom": "^0.14.7"
+    "react-dom": "^0.14.7",
+    "watchify": "^3.7.0"
   }
 }
