--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-skeleton",
-  "version": "1.0.0",
-  "description": "A skeleton for react app",
+  "version": "1.0.1",
+  "description": "A skeleton for react app
+                    Contains a form skeleton",
   "main": "index.js",
   "scripts": {
     "start": "watchify src/main.jsx -v -t [ babelify --presets [ react ] ] -o public/js/main.js",
@@ -25,6 +26,7 @@
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
+    "email-validator": "^1.0.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "watchify": "^3.7.0"
