--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-skeleton",
   "version": "1.0.1",
-  "description": "A skeleton for react app / Contains a form skeleton, a list manager skeleton",
+  "description": "A skeleton for react app / Contains a form skeleton, a list manager skeleton, a navbar skeleton",
   "main": "index.js",
   "scripts": {
     "start": "watchify src/main.jsx -v -t [ babelify --presets [ react ] ] -o public/js/main.js",
@@ -26,8 +26,10 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "email-validator": "^1.0.4",
+    "history": "^1.13.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
+    "react-router": "^2.0.0",
     "watchify": "^3.7.0"
   }
 }
