--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "watchify src/main.jsx -v -t [ babelify --presets [ react ] ] -o public/js/main.js",
+    "server": "nodemon server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -13,9 +14,18 @@
   },
   "keywords": [
     "react",
-    "skeleton"
+    "skeleton",
+    "reflux",
+    "bootstrap",
+    "babel",
+    "browserify",
+    "babelify",
+    "express"
   ],
-  "author": "ephelip",
+  "author": "Etienne Phelip",
+  "emails": [
+    "etienne.phelip@gmail.com"
+  ],
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ephelip/react-skeleton/issues"
@@ -24,8 +34,10 @@
   "dependencies": {
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
+    "body-parser": "^1.15.0",
     "browserify": "^13.0.0",
     "email-validator": "^1.0.4",
+    "express": "^4.13.4",
     "history": "^1.13.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
