--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.0",
-    "watchify": "^3.7.0"
+    "reflux": "^0.3.0",
+    "watchify": "^3.7.0",
+    "whatwg-fetch": "^0.11.0"
   }
 }
